--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Exercice liens sites</title>
+<title>Site Eliot GIL</title>
 </head>
 <body>
 <p><ul>
