--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>Site Eliot GIL</title>
 </head>
 <body>
+        <h1>Mes sites préférés</h1>
 <p><ul>
         <li><a href="https://www.marvel.com/" target="_blank">Le site Marvel</a> pour en savoir plus sur l'Univers des super-héros.</li>
         <li><a href="https://www.youtube.com/" target="_blank">Youtube</a> est un site permettant de voir des vidéos.</li> 
