--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>Site Eliot GIL</title>
 </head>
 <body>
+        <header>Bienvenue sur le site <strong>d'Eliot GIL</strong> !</header> 
         <h1>Mes sites préférés</h1>
 <p><ul>
         <li><a href="https://www.marvel.com/" target="_blank">Le site Marvel</a> pour en savoir plus sur l'Univers des super-héros.</li>
