--- a/index.html
+++ b/index.html
@@ -1,22 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>Site Eliot GIL</title>
-</head>
-<body>
-        <header>Bienvenue sur le site <strong>d'Eliot GIL</strong> !</header> 
-        <h1>Mes sites préférés</h1>
-<p><ul>
-        <li><a href="https://www.marvel.com/" target="_blank">Le site Marvel</a> pour en savoir plus sur l'Univers des super-héros.</li>
-        <li><a href="https://www.youtube.com/" target="_blank">Youtube</a> est un site permettant de voir des vidéos.</li> 
-</ul></p>
-<ol> 
-        <li><a href="https://mail.google.com/" target="_blank">Gmail</a> qui permet de voir ses mails et d'en envoyer.</li> 
-</ol>
-<dl> 
-        <dt><a href="https://www.messenger.com/" target="_blank">Site Messenger</a></dt>
-        <dd>Il permet d'envoyer des messages à ses amis depuis internet.</dd> 
-</dl>
-</body>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<link rel="stylesheet" href="cv_ex.css">
+		<title>Mon CV</title>
+	</head>
+	<body>
+		<div id="header"></div>
+		<div class="left"></div>
+		<div class="stuff">
+			<br><br>
+			<h1>CV</h1>
+			<h2>Eliot</h2>
+			<hr />
+			<br>
+			<p class="head">Intérêts</p>
+			<ul>
+				<li>Alpinisme</li>
+				<li>Apnée</li>
+				<li>Programmation</li>
+				<li>Informatique</li>
+			</ul>
+			<p class="head">Compétences</p>
+			<ul>
+				<li>Web Design with HTML & CSS</li>
+			</ul>
+			<p class="head">Diplômes</p>
+			<ul>
+				<a href="https://fr.wikipedia.org/wiki/Baccalauréat_scientifique">
+					<li>Baccalauréat</li>
+				</a>
+				<!--Link-->
+	
+					<li><a href="https://www.cidj.com/etudes-formations-alternance/les-diplomes/licence-mass-mathematiques-appliquees-et-sciences-sociales">Licence MASS</a> (<a href="https://en.wikipedia.org/wiki/Paris_Diderot_University">Université Paris 7</a>)</li>
+				
+
+			</ul>
+			<p class="head">Experiences</p>
+			<ul>
+				<li>Enseignant-Chercheur</li>
+					<ul>
+						<li>MCF Université de Rouen</li>
+						<li>MCF Université Paris Est Créteil</li>
+						<li>PR Université Paris Est Créteil</li>
+					</ul>
+			</ul>
+			<p class="head">Parascolaires</p>
+			<ul>
+				<li>...</li>
+			</ul>
+		</div>
+		<div class="right"></div>
+		<div id="footer">
+			<h2 id="name">Eliot GIL</h2></div>
+	</body>
 </html>
