--- a/index.html
+++ b/index.html
@@ -2,56 +2,88 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="cv_ex.css">
-		<title>Mon CV</title>
+		<link rel="stylesheet" href="index.css">
+		<title>CV d'Eliot GIL</title>
 	</head>
 	<body>
-		<div id="header"></div>
-		<div class="left"></div>
-		<div class="stuff">
-			<br><br>
-			<h1>CV</h1>
-			<h2>Eliot</h2>
-			<hr />
-			<br>
-			<p class="head">Intérêts</p>
+		<div id="photo_banniere"> <img src="Photo.jpg"> </div>
+
+		<div id="cote"> 
+		<img src="Fond.jpg" id="photo_id"> 
+		<h1 id="titre">CV Eliot GIL</h1>
+		<p id="identite">Coordonnées</p>
+		<ul>
+			<li>201, rue Raymond Losserand 75014 PARIS</li>
+			<li>+33 7 82 89 94 47</li>
+			<li><a href="eliot.gil.pro@gmail.com"></a>eliot.gil.pro@gmail.com</li>
+			<li><a href="https://www.linkedin.com/in/eliotgil">Profil LinkedIn</a></li>
+		</ul>
+		</div>
+
+		<div id="section">
+		<p id="experiences">Expériences</p>
+		<ul>
+			<li class="titre_exp">Alternance Juriste Contrats / NTIC - Depuis Septembre 2021<p>GROUPE KORIAN - LEADER EUROPÉEN D'AIDE À LA PERSONNE</p></li>
+				<ul>
+					<li>Pôle contrat : rédaction contrat d'assistance technique, de licence,
+						hébergement de données, clauses RGPD, location financière,
+						résiliation contractuelle, audits, appels d'offre, maintenance logiciel, SLA.</li>
+					<li>Pôle propriété intellectuelle : gestion du portefeuille de marques,
+						recherches d'antériorités, mises en demeure, accords de coexistence.</li>
+					<li>Missions transverses : rédaction de notes et aides juridiques
+						adressées aux opérationnels.</li>
+				</ul>
+			<li class="titre_exp">Community Manager et créateur de contenus juridiques - Juin 2020 à Novembre 2021<p>START-UP "JURISLOGIC"
+				- PARIS STATION-F</p></li>
+				<ul>
+					<li>Stage en legaltech, juin à septembre 2020, avec pour missions : création de contenus juridiques, de designs et community manager du compte Instagram.</li>
+					<li>Travail en freelance, septembre 2020 à fin 2021, comme community manager : création et gestion du contenu, gestion des abonnés (augmentation de 1300%), participation aux stratégies marketing.</li>
+				</ul>
+			<li class="titre_exp">Accueil et gestion du public en allemand - Août 2018<p>OFFICE DE TOURISME - BAYREUTH (ALLEMAGNE)</p></li>
+			<li class="titre_exp">Stage en droit des affaires et en propriété intellectuelle - Juillet 2018<p>CABINET D'AFFAIRES "AVANNE'-ANNECY</p></li>
+				<ul>
+					<li>Missions : relecture conclusions, aide juridique, secrétariat juridique en
+						droit des sociétés, des affaires et de la propriété intellectuelle.</li></ul>
+					<li>Lauréat concours design : création d'un logo - 2017<p>ACADÉMIE DE GRENOBLE</p></li>
+				</ul>
+
+			<p id="diplomes">Diplômes</p>
 			<ul>
-				<li>Alpinisme</li>
-				<li>Apnée</li>
-				<li>Programmation</li>
-				<li>Informatique</li>
+				<li class="titre_exp"><a href="https://www.u-pec.fr/fr/formation/master-droit-du-numerique-parcours-informatique-et-droit">Master Droit du numérique et Informatique</a><p>U-PEC - 2021 à 2023</p></li>
+					<ul>
+						<li>Formation en droit des contrats et propriété intellectuelle appliqué à
+							l'informatique : contrat de licence, négociation contractuelle, contrat
+							de service, droit d'auteur, marques.</li>
+						<li>Formation en informatique : culture technique, logique mathématique, codage en C, HTML, CSS.</li>
+					</ul>
+				<li class="titre_exp"><a href="https://secnumacademie.gouv.fr">Formation "SecNumAcadémie"</a><p>ANSSI - 2021</p></li>
+					<ul>
+						<li>Formation de l'ANSSI concernant la cybersécurité.</li>
+					</ul>
+				<li class="titre_exp"><a href="https://formations.pantheonsorbonne.fr/fr/catalogue-des-formations/licence-L/licence-droit-KBT8CDAC/double-licence-droit-economie-KBT8CEW8.html">Double Licence Droit - Economie</a><p>UNIVERSITÉ PANTHÉON SORBONNE PARIS 1 - 2019 À 2021</p></li>
+				<li>Baccalauréat - Mention TB<p>LYCÉE BERTHOLLET-ANNECY</p></li>
 			</ul>
-			<p class="head">Compétences</p>
+
+			<p id="divers">Divers</p>
 			<ul>
+				<li>Allemand B1</li>
+				<li>Anglais C1</li>
+				<li>Autonomie</li>
+				<li>Proactivité</li>
+				<li>Adaptabilité</li>
+				<li>Culture informatique</li>
+				<li>Forte maitrise du Pack Office 365</li>
+				<li>Forte maitrise de l'outil Canva</li>
+				<li>Maitrise basique du language C et SQL</li>
 				<li>Web Design with HTML & CSS</li>
 			</ul>
-			<p class="head">Diplômes</p>
-			<ul>
-				<a href="https://fr.wikipedia.org/wiki/Baccalauréat_scientifique">
-					<li>Baccalauréat</li>
-				</a>
-				<!--Link-->
-	
-					<li><a href="https://www.cidj.com/etudes-formations-alternance/les-diplomes/licence-mass-mathematiques-appliquees-et-sciences-sociales">Licence MASS</a> (<a href="https://en.wikipedia.org/wiki/Paris_Diderot_University">Université Paris 7</a>)</li>
-				
-
-			</ul>
-			<p class="head">Experiences</p>
-			<ul>
-				<li>Enseignant-Chercheur</li>
-					<ul>
-						<li>MCF Université de Rouen</li>
-						<li>MCF Université Paris Est Créteil</li>
-						<li>PR Université Paris Est Créteil</li>
-					</ul>
-			</ul>
-			<p class="head">Parascolaires</p>
-			<ul>
-				<li>...</li>
-			</ul>
 		</div>
-		<div class="right"></div>
+
+		<div id="photo_en_bas"> <img src="Fond.jpg"> </div>
+
 		<div id="footer">
-			<h2 id="name">Eliot GIL</h2></div>
+			<h2 id="name">Eliot GIL</h2>
+		</div>
+
 	</body>
 </html>
