--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>CV d'Eliot GIL</title>
 	</head>
 	<body>
+		<div id="body">
 		<div id="photo_banniere"> <img src="Photo.jpg"> </div>
 
 		<div id="cote"> 
@@ -84,6 +85,6 @@
 		<div id="footer">
 			<h2 id="name">Eliot GIL</h2>
 		</div>
-
+		</div>
 	</body>
 </html>
