--- a/index.html
+++ b/index.html
@@ -1,90 +1,107 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="index.css">
 		<title>CV d'Eliot GIL</title>
 	</head>
+
 	<body>
-		<div id="body">
-		<div id="photo_banniere"> <img src="Photo.jpg"> </div>
 
-		<div id="cote"> 
-		<img src="Fond.jpg" id="photo_id"> 
-		<h1 id="titre">CV Eliot GIL</h1>
-		<p id="identite">Coordonnées</p>
-		<ul>
-			<li>201, rue Raymond Losserand 75014 PARIS</li>
-			<li>+33 7 82 89 94 47</li>
-			<li><a href="eliot.gil.pro@gmail.com"></a>eliot.gil.pro@gmail.com</li>
-			<li><a href="https://www.linkedin.com/in/eliotgil">Profil LinkedIn</a></li>
-		</ul>
-		</div>
+		<div id="flex1">
+	
+			<header><div id="photo_banniere"> <img src="Fond.jpeg"> </div></header>
 
-		<div id="section">
-		<p id="experiences">Expériences</p>
-		<ul>
-			<li class="titre_exp">Alternance Juriste Contrats / NTIC - Depuis Septembre 2021<p>GROUPE KORIAN - LEADER EUROPÉEN D'AIDE À LA PERSONNE</p></li>
-				<ul>
-					<li>Pôle contrat : rédaction contrat d'assistance technique, de licence,
-						hébergement de données, clauses RGPD, location financière,
-						résiliation contractuelle, audits, appels d'offre, maintenance logiciel, SLA.</li>
-					<li>Pôle propriété intellectuelle : gestion du portefeuille de marques,
-						recherches d'antériorités, mises en demeure, accords de coexistence.</li>
-					<li>Missions transverses : rédaction de notes et aides juridiques
-						adressées aux opérationnels.</li>
-				</ul>
-			<li class="titre_exp">Community Manager et créateur de contenus juridiques - Juin 2020 à Novembre 2021<p>START-UP "JURISLOGIC"
-				- PARIS STATION-F</p></li>
-				<ul>
-					<li>Stage en legaltech, juin à septembre 2020, avec pour missions : création de contenus juridiques, de designs et community manager du compte Instagram.</li>
-					<li>Travail en freelance, septembre 2020 à fin 2021, comme community manager : création et gestion du contenu, gestion des abonnés (augmentation de 1300%), participation aux stratégies marketing.</li>
-				</ul>
-			<li class="titre_exp">Accueil et gestion du public en allemand - Août 2018<p>OFFICE DE TOURISME - BAYREUTH (ALLEMAGNE)</p></li>
-			<li class="titre_exp">Stage en droit des affaires et en propriété intellectuelle - Juillet 2018<p>CABINET D'AFFAIRES "AVANNE'-ANNECY</p></li>
-				<ul>
-					<li>Missions : relecture conclusions, aide juridique, secrétariat juridique en
-						droit des sociétés, des affaires et de la propriété intellectuelle.</li></ul>
-					<li>Lauréat concours design : création d'un logo - 2017<p>ACADÉMIE DE GRENOBLE</p></li>
-				</ul>
+			<section id="flex2">
 
-			<p id="diplomes">Diplômes</p>
-			<ul>
-				<li class="titre_exp"><a href="https://www.u-pec.fr/fr/formation/master-droit-du-numerique-parcours-informatique-et-droit">Master Droit du numérique et Informatique</a><p>U-PEC - 2021 à 2023</p></li>
+				<aside> 
+					<img src="Photo.jpeg" id="photo_id"> 
+					<h1 id="titre">CV Eliot GIL</h1>
+					<div class="bloc">
+					<p id="coordonees">Coordonnées</p>
 					<ul>
-						<li>Formation en droit des contrats et propriété intellectuelle appliqué à
-							l'informatique : contrat de licence, négociation contractuelle, contrat
-							de service, droit d'auteur, marques.</li>
-						<li>Formation en informatique : culture technique, logique mathématique, codage en C, HTML, CSS.</li>
+						<li>201, rue Raymond Losserand 75014 PARIS</li>
+						<li>+33 7 82 89 94 47</li>
+						<li><a href="eliot.gil.pro@gmail.com"></a>eliot.gil.pro@gmail.com</li>
+						<li><a id="LinkedIn" href="https://www.linkedin.com/in/eliotgil" target="_blank">Profil LinkedIn</a></li>
 					</ul>
-				<li class="titre_exp"><a href="https://secnumacademie.gouv.fr">Formation "SecNumAcadémie"</a><p>ANSSI - 2021</p></li>
-					<ul>
-						<li>Formation de l'ANSSI concernant la cybersécurité.</li>
-					</ul>
-				<li class="titre_exp"><a href="https://formations.pantheonsorbonne.fr/fr/catalogue-des-formations/licence-L/licence-droit-KBT8CDAC/double-licence-droit-economie-KBT8CEW8.html">Double Licence Droit - Economie</a><p>UNIVERSITÉ PANTHÉON SORBONNE PARIS 1 - 2019 À 2021</p></li>
-				<li>Baccalauréat - Mention TB<p>LYCÉE BERTHOLLET-ANNECY</p></li>
-			</ul>
+				</aside>
 
-			<p id="divers">Divers</p>
-			<ul>
-				<li>Allemand B1</li>
-				<li>Anglais C1</li>
-				<li>Autonomie</li>
-				<li>Proactivité</li>
-				<li>Adaptabilité</li>
-				<li>Culture informatique</li>
-				<li>Forte maitrise du Pack Office 365</li>
-				<li>Forte maitrise de l'outil Canva</li>
-				<li>Maitrise basique du language C et SQL</li>
-				<li>Web Design with HTML & CSS</li>
-			</ul>
+				<article>
+
+					<div class="bloc">
+						<h2 class="categorie">Expériences</h2>
+						<br>
+						<ul>
+							<li>Alternance Juriste Contrats / NTIC - Depuis Septembre 2021<a href="https://www.korian.fr"><p class="italic">GROUPE KORIAN - LEADER EUROPÉEN D'AIDE À LA PERSONNE</p></a></li>
+								<ul>
+									<li>Pôle contrat : rédaction contrat d'assistance technique, de licence, hébergement de données, clauses RGPD, location financière, résiliation contractuelle, audits, appels d'offre, maintenance logiciel, SLA.</li>
+									<li>Pôle propriété intellectuelle : gestion du portefeuille de marques, recherches d'antériorités, mises en demeure, accords de coexistence.</li>
+									<li>Missions transverses : rédaction de notes et aides juridiques adressées aux opérationnels.</li>
+								</ul>
+							<li>Community Manager et créateur de contenus juridiques - Juin 2020 à Novembre 2021<a href="https://jurislogic.fr"><p class="italic">START-UP "JURISLOGIC"	- PARIS STATION-F</p></a></li>
+								<ul>
+									<li>Stage en legaltech, juin à septembre 2020, avec pour missions : création de contenus juridiques, de designs et community manager du compte Instagram.</li>
+									<li>Travail en freelance, septembre 2020 à fin 2021, comme community manager : création et gestion du contenu, gestion des abonnés (augmentation de 1300%), participation aux stratégies marketing.</li>
+								</ul>
+							<li>Accueil et gestion du public en allemand - Août 2018<a href="https://www.derpart.com/bayreuth"><p class="italic">OFFICE DE TOURISME - BAYREUTH (ALLEMAGNE)</p></a></li>
+							<li>Stage en droit des affaires et en propriété intellectuelle - Juillet 2018<a href="https://www.avanne-avocats.fr"><p class="italic">CABINET D'AFFAIRES "AVANNE'-ANNECY</p></a></li>
+								<ul>
+									<li>Missions : relecture conclusions, aide juridique, secrétariat juridique en droit des sociétés, des affaires et de la propriété intellectuelle.</li>
+								</ul>
+							<li>Lauréat concours design : création d'un logo - 2017<a href="https://www1.ac-grenoble.fr/article/cavl-conseil-academique-de-la-vie-lyceenne-121943"><p class="italic">CVAL ACADÉMIE DE GRENOBLE</p></a></li>
+						</ul>
+					</div>
+
+					<div class="bloc">
+						<h2 class="categorie">Diplômes</h2>
+						<br>
+						<ul>
+							<li><a href="https://www.u-pec.fr/fr/formation/master-droit-du-numerique-parcours-informatique-et-droit" target="_blank">Master Droit du numérique et Informatique</a><p class="italic">U-PEC - 2021 à 2023</p></li>
+								<ul>
+									<li>Formation en droit des contrats et propriété intellectuelle appliqué à l'informatique : contrat de licence, négociation contractuelle, contrat de service, droit d'auteur, marques.</li>
+									<li>Formation en informatique : culture technique, logique mathématique, codage en C, HTML, CSS.</li>
+								</ul>
+							<li><a href="https://secnumacademie.gouv.fr" target="_blank">Formation "SecNumAcadémie"</a><p class="italic">ANSSI - 2021</p></li>
+								<ul>
+									<li>Formation de l'ANSSI concernant la cybersécurité.</li>
+								</ul>
+							<li><a href="https://formations.pantheonsorbonne.fr/fr/catalogue-des-formations/licence-L/licence-droit-KBT8CDAC/double-licence-droit-economie-KBT8CEW8.html" target="_blank">Double Licence Droit - Economie</a><p class="italic">UNIVERSITÉ PANTHÉON SORBONNE PARIS 1 - 2019 À 2021</p></li>
+							<li><a href="https://fr.wikipedia.org/wiki/Baccalauréat_en_France" target="_blank">Baccalauréat - Mention TB</a><p class="italic">LYCÉE BERTHOLLET-ANNECY</p></li>
+						</ul>
+					</div>
+
+					<div class="bloc">
+						<h2 class="categorie">Divers</h2>
+						<br>
+						<ul>
+							<li>Allemand B1</li>
+							<li>Anglais C1</li>
+							<li>Autonomie</li>
+							<li>Proactivité</li>
+							<li>Adaptabilité</li>
+							<li>Culture informatique</li>
+							<li>Forte maitrise du Pack Office 365</li>
+							<li>Forte maitrise de l'outil Canva</li>
+							<li>Maitrise basique du language C et SQL</li>
+							<li>Web Design en HTML & CSS</li>
+						</ul>
+					</div>
+
+				</article>
+
+			</section>
+
+			<footer>
+				<div id="footer">
+					<div id="photo_en_bas"> <img src="Fond.jpeg"> </div>
+					<h2 id="name">Eliot GIL</h2>
+				</div>
+			</footer>
+
 		</div>
 
-		<div id="photo_en_bas"> <img src="Fond.jpg"> </div>
-
-		<div id="footer">
-			<h2 id="name">Eliot GIL</h2>
-		</div>
-		</div>
 	</body>
+	
 </html>
