--- a/index.html
+++ b/index.html
@@ -8,72 +8,91 @@
 	</head>
 
 	<body>
+		<header>
 
-		<div id="flex1">
-	
-			<header><div id="photo_banniere"> <img src="Fond.jpeg"> </div></header>
+			<div id="bloc_ancre">
+				<ul id="ul_ancre">
+					<li class="li_ancre"><span style="text-decoration: underline";>Menu : </span></li>
+					<li class="li_ancre"><a href="#Experiences">Expériences</a></li>
+					<li class="li_ancre"><a href="#Diplomes">Diplômes</a></li>
+					<li class="li_ancre"><a href="#Competences">Compétences</a></li>
+				</ul>
+			</div>
 
-			<section id="flex2">
+		</header>
+
+			<section id="flex">
 
 				<aside> 
 					<img src="Photo.jpeg" id="photo_id"> 
 					<h1 id="titre">CV Eliot GIL</h1>
+
 					<div class="bloc">
-					<p id="coordonees">Coordonnées</p>
-					<ul>
-						<li>201, rue Raymond Losserand 75014 PARIS</li>
-						<li>+33 7 82 89 94 47</li>
-						<li><a href="eliot.gil.pro@gmail.com"></a>eliot.gil.pro@gmail.com</li>
-						<li><a id="LinkedIn" href="https://www.linkedin.com/in/eliotgil" target="_blank">Profil LinkedIn</a></li>
-					</ul>
+						<p class="categorie_cote">Coordonnées</p>
+						<p><img src="logoadresse.png" class="logo">201, rue Raymond Losserand 75014 PARIS</p>
+						<p><img src="logotelephone.png" class="logo">+33 7 82 89 94 47</p>
+						<p><img src="logomail.png" class="logo"><a href="mailto:eliot.gil.pro@gmail.com"></a>eliot.gil.pro@gmail.com</p>
+						<p><img src="logolinkedin.png"  class="logo"><a id="LinkedIn" href="https://www.linkedin.com/in/eliotgil" target="_blank">Profil LinkedIn</a></p>
+					</div>
+
+					<div class="bloc">
+						<p class="categorie_cote">Loisirs</p>
+						<ul>
+							<li>Cinéma d'animation</li>
+							<li>Comic books</li>
+							<li>Jeux vidéos</li>
+							<li>Escalade</li>
+						</ul>
+					</div>
+					
 				</aside>
 
 				<article>
 
 					<div class="bloc">
-						<h2 class="categorie">Expériences</h2>
+						<h2 id="Experiences">Expériences</h2>
 						<br>
 						<ul>
-							<li>Alternance Juriste Contrats / NTIC - Depuis Septembre 2021<a href="https://www.korian.fr"><p class="italic">GROUPE KORIAN - LEADER EUROPÉEN D'AIDE À LA PERSONNE</p></a></li>
+							<li>Alternance Juriste Contrats / NTIC - Depuis Septembre 2021<a href="https://www.korian.fr"><div class="italic">GROUPE KORIAN - LEADER EUROPÉEN D'AIDE À LA PERSONNE</div></a></li>
 								<ul>
 									<li>Pôle contrat : rédaction contrat d'assistance technique, de licence, hébergement de données, clauses RGPD, location financière, résiliation contractuelle, audits, appels d'offre, maintenance logiciel, SLA.</li>
 									<li>Pôle propriété intellectuelle : gestion du portefeuille de marques, recherches d'antériorités, mises en demeure, accords de coexistence.</li>
 									<li>Missions transverses : rédaction de notes et aides juridiques adressées aux opérationnels.</li>
 								</ul>
-							<li>Community Manager et créateur de contenus juridiques - Juin 2020 à Novembre 2021<a href="https://jurislogic.fr"><p class="italic">START-UP "JURISLOGIC"	- PARIS STATION-F</p></a></li>
+							<li>Community Manager et créateur de contenus juridiques - Juin 2020 à Novembre 2021<a href="https://jurislogic.fr"><div class="italic">START-UP "JURISLOGIC" - PARIS STATION-F</div></a></li>
 								<ul>
 									<li>Stage en legaltech, juin à septembre 2020, avec pour missions : création de contenus juridiques, de designs et community manager du compte Instagram.</li>
 									<li>Travail en freelance, septembre 2020 à fin 2021, comme community manager : création et gestion du contenu, gestion des abonnés (augmentation de 1300%), participation aux stratégies marketing.</li>
 								</ul>
-							<li>Accueil et gestion du public en allemand - Août 2018<a href="https://www.derpart.com/bayreuth"><p class="italic">OFFICE DE TOURISME - BAYREUTH (ALLEMAGNE)</p></a></li>
-							<li>Stage en droit des affaires et en propriété intellectuelle - Juillet 2018<a href="https://www.avanne-avocats.fr"><p class="italic">CABINET D'AFFAIRES "AVANNE'-ANNECY</p></a></li>
+							<li>Accueil et gestion du public en allemand - Août 2018<a href="https://www.derpart.com/bayreuth"><div class="italic">OFFICE DE TOURISME - BAYREUTH (ALLEMAGNE)</div></a></li>
+							<li>Stage en droit des affaires et en propriété intellectuelle - Juillet 2018<a href="https://www.avanne-avocats.fr"><div class="italic">CABINET D'AFFAIRES "AVANNE" - ANNECY</div></a></li>
 								<ul>
 									<li>Missions : relecture conclusions, aide juridique, secrétariat juridique en droit des sociétés, des affaires et de la propriété intellectuelle.</li>
 								</ul>
-							<li>Lauréat concours design : création d'un logo - 2017<a href="https://www1.ac-grenoble.fr/article/cavl-conseil-academique-de-la-vie-lyceenne-121943"><p class="italic">CVAL ACADÉMIE DE GRENOBLE</p></a></li>
+							<li>Lauréat concours design : création d'un logo - 2017<a href="https://www1.ac-grenoble.fr/article/cavl-conseil-academique-de-la-vie-lyceenne-121943"><div class="italic">CVAL ACADÉMIE DE GRENOBLE</div></a></li>
 						</ul>
 					</div>
 
 					<div class="bloc">
-						<h2 class="categorie">Diplômes</h2>
+						<h2 id="Diplomes">Diplômes</h2>
 						<br>
 						<ul>
-							<li><a href="https://www.u-pec.fr/fr/formation/master-droit-du-numerique-parcours-informatique-et-droit" target="_blank">Master Droit du numérique et Informatique</a><p class="italic">U-PEC - 2021 à 2023</p></li>
+							<li><a href="https://www.u-pec.fr/fr/formation/master-droit-du-numerique-parcours-informatique-et-droit" target="_blank">Master Droit du numérique et Informatique</a><div class="italic">U-PEC - 2021 à 2023</div></li>
 								<ul>
 									<li>Formation en droit des contrats et propriété intellectuelle appliqué à l'informatique : contrat de licence, négociation contractuelle, contrat de service, droit d'auteur, marques.</li>
 									<li>Formation en informatique : culture technique, logique mathématique, codage en C, HTML, CSS.</li>
 								</ul>
-							<li><a href="https://secnumacademie.gouv.fr" target="_blank">Formation "SecNumAcadémie"</a><p class="italic">ANSSI - 2021</p></li>
+							<li><a href="https://secnumacademie.gouv.fr" target="_blank">Formation "SecNumAcadémie"</a><div class="italic">ANSSI - 2021</div></li>
 								<ul>
 									<li>Formation de l'ANSSI concernant la cybersécurité.</li>
 								</ul>
-							<li><a href="https://formations.pantheonsorbonne.fr/fr/catalogue-des-formations/licence-L/licence-droit-KBT8CDAC/double-licence-droit-economie-KBT8CEW8.html" target="_blank">Double Licence Droit - Economie</a><p class="italic">UNIVERSITÉ PANTHÉON SORBONNE PARIS 1 - 2019 À 2021</p></li>
-							<li><a href="https://fr.wikipedia.org/wiki/Baccalauréat_en_France" target="_blank">Baccalauréat - Mention TB</a><p class="italic">LYCÉE BERTHOLLET-ANNECY</p></li>
+							<li><a href="https://formations.pantheonsorbonne.fr/fr/catalogue-des-formations/licence-L/licence-droit-KBT8CDAC/double-licence-droit-economie-KBT8CEW8.html" target="_blank">Double Licence Droit - Economie</a><div class="italic">UNIVERSITÉ PANTHÉON SORBONNE PARIS 1 - 2019 À 2021</div></li>
+							<li><a href="https://fr.wikipedia.org/wiki/Baccalauréat_en_France" target="_blank">Baccalauréat - Mention TB</a><div class="italic">LYCÉE BERTHOLLET-ANNECY</div></li>
 						</ul>
 					</div>
 
 					<div class="bloc">
-						<h2 class="categorie">Divers</h2>
+						<h2 id="Competences">Compétences</h2>
 						<br>
 						<ul>
 							<li>Allemand B1</li>
@@ -93,14 +112,9 @@
 
 			</section>
 
-			<footer>
-				<div id="footer">
-					<div id="photo_en_bas"> <img src="Fond.jpeg"> </div>
-					<h2 id="name">Eliot GIL</h2>
-				</div>
-			</footer>
-
-		</div>
+		<footer>
+			<div id="flex_bas"><p id="bas"><a href="#">  Pour remonter en haut, appuyez ici :)  </a></p></div>
+		</footer>
 
 	</body>
 	
