--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<head>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="index.css">
-		<link rel="icon" href="images/Photo_icone.ico" alt="">
 		<title>CV d'Eliot GIL</title>
 	</head>
 
@@ -13,7 +12,6 @@
 
 			<div id="bloc_ancre">
 				<ul id="ul_ancre">
-					<li class="li_ancre"><span style="text-decoration: underline">Menu : </span></li>
 					<li class="li_ancre"><a href="#Experiences">Expériences</a></li>
 					<li class="li_ancre"><a href="#Diplomes">Diplômes</a></li>
 					<li class="li_ancre"><a href="#Competences">Compétences</a></li>
@@ -42,6 +40,7 @@
 							<li>Cinéma d'animation</li>
 							<li>Comic books</li>
 							<li>Jeux vidéos</li>
+							<li>Randonnée</li>
 							<li>Escalade</li>
 						</ul>
 					</div>
@@ -56,44 +55,54 @@
 				<article>
 
 					<div class="bloc">
+
 						<h2 id="Experiences">Expériences</h2>
-						<br>
-						<ul>
-							<li><img id="korian" src="images/korian.jpeg" alt="">Alternance Juriste Contrats / NTIC - Depuis Septembre 2021<a href="https://www.korian.fr"><div class="italic">GROUPE KORIAN - LEADER EUROPÉEN D'AIDE À LA PERSONNE</div></a></li>
+
+						<ul class="puce_1er">
+							<li class="cadre_puce_tout"><img class="image_exp_1" src="images/korian.jpeg" alt="">Alternance Juriste Contrats / NTIC - Depuis Septembre 2021<br><a href="https://www.korian.fr">GROUPE KORIAN - LEADER EUROPÉEN D'AIDE À LA PERSONNE</a>
 								<ul>
 									<li class="li_2nd">Pôle contrat : rédaction contrat d'assistance technique, de licence, hébergement de données, clauses RGPD, location financière, résiliation contractuelle, audits, appels d'offre, maintenance logiciel, SLA.</li>
 									<li class="li_2nd">Pôle propriété intellectuelle : gestion du portefeuille de marques, recherches d'antériorités, mises en demeure, accords de coexistence.</li>
 									<li class="li_2nd">Missions transverses : rédaction de notes et aides juridiques adressées aux opérationnels.</li>
 								</ul>
-							<li><img id="jurislogic" src="images/jurislogic.png" alt="">Community Manager et créateur de contenus juridiques - Juin 2020 à Novembre 2021<a href="https://jurislogic.fr"><div class="italic">START-UP "JURISLOGIC" - PARIS STATION-F</div></a></li>
+							</li>
+
+							<li class="cadre_puce_tout"><img id="jurislogic" src="images/jurislogic.png" alt="">Community Manager et créateur de contenus juridiques -<br> Juin 2020 à Novembre 2021<br><a href="https://jurislogic.fr">START-UP "JURISLOGIC" - PARIS STATION-F</a>
 								<ul>
 									<li class="li_2nd">Stage en legaltech, juin à septembre 2020, avec pour missions : création de contenus juridiques, de designs et community manager du compte Instagram.</li>
 									<li class="li_2nd">Travail en freelance, septembre 2020 à fin 2021, comme community manager : création et gestion du contenu, gestion des abonnés (augmentation de 1300%), participation aux stratégies marketing.</li>
 								</ul>
-							<li><img id="bayreuth" src="images/bayreuth.jpeg" alt="">Accueil et gestion du public en allemand - Août 2018<a href="https://www.derpart.com/bayreuth"><div class="italic">OFFICE DE TOURISME - BAYREUTH (ALLEMAGNE)</div></a></li>
-							<li><img id="avocat" src="images/avocat.jpeg" alt="">Stage en droit des affaires et en propriété intellectuelle - Juillet 2018<a href="https://www.avanne-avocats.fr"><div class="italic">CABINET D'AFFAIRES "AVANNE" - ANNECY</div></a></li>
+							</li>
+
+							<li class="cadre_puce_tout_sans_li2nd"><img class="image_exp_1" src="images/bayreuth.jpeg" alt="">Accueil et gestion du public en allemand - Août 2018<br><a href="https://www.derpart.com/bayreuth">OFFICE DE TOURISME - BAYREUTH (ALLEMAGNE)</a></li>
+
+							<li class="cadre_puce_tout"><img class="image_exp_2" src="images/avocat.jpeg" alt="">Stage en droit des affaires et en propriété intellectuelle - Juillet 2018<br><a href="https://www.avanne-avocats.fr">CABINET D'AFFAIRES "AVANNE" - ANNECY</a>
 								<ul>
 									<li class="li_2nd">Missions : relecture conclusions, aide juridique, secrétariat juridique en droit des sociétés, des affaires et de la propriété intellectuelle.</li>
 								</ul>
-							<li><img id="design" src="images/design.png" alt="">Lauréat concours design : création d'un logo - 2017<a href="https://www1.ac-grenoble.fr/article/cavl-conseil-academique-de-la-vie-lyceenne-121943"><div class="italic">CVAL ACADÉMIE DE GRENOBLE</div></a></li>
+							</li>
+
+							<li class="cadre_puce_tout_sans_li2nd"><img class="image_exp_2" src="images/design.png" alt="">Lauréat concours design : création d'un logo - 2017<br><a href="https://www1.ac-grenoble.fr/article/cavl-conseil-academique-de-la-vie-lyceenne-121943">CVAL ACADÉMIE DE GRENOBLE</a></li>
 						</ul>
 					</div>
 
 					<div class="bloc">
 						<h2 id="Diplomes">Diplômes</h2>
 						<br>
-						<ul>
-							<li><a href="https://www.u-pec.fr/fr/formation/master-droit-du-numerique-parcours-informatique-et-droit" target="_blank">Master Droit du numérique et Informatique</a><div class="italic">U-PEC - 2021 à 2023</div></li>
+						<ul class="puce_1er">
+							<li class="cadre_puce_tout_diplomes"><img class="image_diplome_1" src="images/UPEC.jpeg" alt=""><a href="https://www.u-pec.fr/fr/formation/master-droit-du-numerique-parcours-informatique-et-droit" target="_blank">Master Droit du numérique et Informatique</a><br>U-PEC - 2021 à 2023
 								<ul>
-									<li>Formation en droit des contrats et propriété intellectuelle appliqué à l'informatique : contrat de licence, négociation contractuelle, contrat de service, droit d'auteur, marques.</li>
-									<li>Formation en informatique : culture technique, logique mathématique, codage en C, HTML, CSS.</li>
+									<li class="li_2nd_diplomes">Formation en droit des contrats et propriété intellectuelle appliqué à l'informatique : contrat de licence, négociation contractuelle, contrat de service, droit d'auteur, marques.</li>
+									<li class="li_2nd_diplomes">Formation en informatique : culture technique, logique mathématique, codage en C, HTML, CSS.</li>
 								</ul>
-							<li><a href="https://secnumacademie.gouv.fr" target="_blank">Formation "SecNumAcadémie"</a><div class="italic">ANSSI - 2021</div></li>
+							</li>
+							<li class="cadre_puce_tout_diplomes"><img class="image_diplome_1" src="images/ANSSI.png" alt=""><a href="https://secnumacademie.gouv.fr" target="_blank">Formation "SecNumAcadémie"</a><br>ANSSI - 2021
 								<ul>
-									<li>Formation de l'ANSSI concernant la cybersécurité.</li>
+									<li class="li_2nd_diplomes">Formation de l'ANSSI concernant la cybersécurité.</li>
 								</ul>
-							<li><a href="https://formations.pantheonsorbonne.fr/fr/catalogue-des-formations/licence-L/licence-droit-KBT8CDAC/double-licence-droit-economie-KBT8CEW8.html" target="_blank">Double Licence Droit - Economie</a><div class="italic">UNIVERSITÉ PANTHÉON SORBONNE PARIS 1 - 2019 À 2021</div></li>
-							<li><a href="https://fr.wikipedia.org/wiki/Baccalauréat_en_France" target="_blank">Baccalauréat - Mention TB</a><div class="italic">LYCÉE BERTHOLLET-ANNECY</div></li>
+							</li>
+							<li class="cadre_puce_tout_diplomes_sans_li"><img class="image_diplome_2" src="images/Paris1.png" alt=""><a href="https://formations.pantheonsorbonne.fr/fr/catalogue-des-formations/licence-L/licence-droit-KBT8CDAC/double-licence-droit-economie-KBT8CEW8.html" target="_blank">Double Licence Droit - Economie</a><br>UNIVERSITÉ PANTHÉON SORBONNE PARIS 1 - 2019 À 2021</li>
+							<li class="cadre_puce_tout_diplomes_sans_li"><img class="image_diplome_2" src="images/Berthollet.jpeg" alt=""><a href="https://fr.wikipedia.org/wiki/Baccalauréat_en_France" target="_blank">Baccalauréat - Mention TB</a><br>LYCÉE BERTHOLLET-ANNECY</li>
 						</ul>
 					</div>
 
@@ -112,6 +121,8 @@
 							<li>Maitrise basique du language C et SQL</li>
 							<li>Web Design en HTML & CSS</li>
 						</ul>
+						<br>
+						<br>
 					</div>
 
 				</article>
