--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			<section id="flex">
 
 				<aside> 
+
 					<img src="images/Photo.jpeg" alt="" id="photo_id"> 
 					<h1 id="titre">CV Eliot GIL</h1>
 
@@ -59,6 +60,7 @@
 						<h2 id="Experiences">Expériences</h2>
 
 						<ul class="puce_1er">
+
 							<li class="cadre_puce_tout"><img class="image_exp_1" src="images/korian.jpeg" alt="">Alternance Juriste Contrats / NTIC - Depuis Septembre 2021<br><a href="https://www.korian.fr">GROUPE KORIAN - LEADER EUROPÉEN D'AIDE À LA PERSONNE</a>
 								<ul>
 									<li class="li_2nd">Pôle contrat : rédaction contrat d'assistance technique, de licence, hébergement de données, clauses RGPD, location financière, résiliation contractuelle, audits, appels d'offre, maintenance logiciel, SLA.</li>
@@ -83,46 +85,71 @@
 							</li>
 
 							<li class="cadre_puce_tout_sans_li2nd"><img class="image_exp_2" src="images/design.png" alt="">Lauréat concours design : création d'un logo - 2017<br><a href="https://www1.ac-grenoble.fr/article/cavl-conseil-academique-de-la-vie-lyceenne-121943">CVAL ACADÉMIE DE GRENOBLE</a></li>
+
 						</ul>
+
 					</div>
 
 					<div class="bloc">
+
 						<h2 id="Diplomes">Diplômes</h2>
 						<br>
+
 						<ul class="puce_1er">
+
 							<li class="cadre_puce_tout_diplomes"><img class="image_diplome_1" src="images/UPEC.jpeg" alt=""><a href="https://www.u-pec.fr/fr/formation/master-droit-du-numerique-parcours-informatique-et-droit" target="_blank">Master Droit du numérique et Informatique</a><br>U-PEC - 2021 à 2023
 								<ul>
 									<li class="li_2nd_diplomes">Formation en droit des contrats et propriété intellectuelle appliqué à l'informatique : contrat de licence, négociation contractuelle, contrat de service, droit d'auteur, marques.</li>
 									<li class="li_2nd_diplomes">Formation en informatique : culture technique, logique mathématique, codage en C, HTML, CSS.</li>
 								</ul>
 							</li>
+
 							<li class="cadre_puce_tout_diplomes"><img class="image_diplome_1" src="images/ANSSI.png" alt=""><a href="https://secnumacademie.gouv.fr" target="_blank">Formation "SecNumAcadémie"</a><br>ANSSI - 2021
 								<ul>
 									<li class="li_2nd_diplomes">Formation de l'ANSSI concernant la cybersécurité.</li>
 								</ul>
 							</li>
+
 							<li class="cadre_puce_tout_diplomes_sans_li"><img class="image_diplome_2" src="images/Paris1.png" alt=""><a href="https://formations.pantheonsorbonne.fr/fr/catalogue-des-formations/licence-L/licence-droit-KBT8CDAC/double-licence-droit-economie-KBT8CEW8.html" target="_blank">Double Licence Droit - Economie</a><br>UNIVERSITÉ PANTHÉON SORBONNE PARIS 1 - 2019 À 2021</li>
+
 							<li class="cadre_puce_tout_diplomes_sans_li"><img class="image_diplome_2" src="images/Berthollet.jpeg" alt=""><a href="https://fr.wikipedia.org/wiki/Baccalauréat_en_France" target="_blank">Baccalauréat - Mention TB</a><br>LYCÉE BERTHOLLET-ANNECY</li>
+
 						</ul>
+
 					</div>
 
 					<div class="bloc">
+
 						<h2 id="Competences">Compétences</h2>
 						<br>
-						<ul>
-							<li>Allemand B1</li>
-							<li>Anglais C1</li>
-							<li>Autonomie</li>
-							<li>Proactivité</li>
-							<li>Adaptabilité</li>
-							<li>Culture informatique</li>
-							<li>Forte maitrise du Pack Office 365</li>
-							<li>Forte maitrise de l'outil Canva</li>
-							<li>Maitrise basique du language C et SQL</li>
-							<li>Web Design en HTML & CSS</li>
+
+						<ul id="flex_competence">
+
+							<li class="milieu"><img class="logo_competences" src="images/Logo_DE.png" alt=""><div class="texte_competence">Allemand B1</div></li>
+
+							<li class="milieu"><img class="logo_competences" src="images/Logo_UK.png" alt="">Anglais C1</li>
+
+							<li class="milieu"><img class="logo_competences" src="images/Logo_Autonomie.png" alt="">Autonomie</li>
+
+							<li class="milieu"><img class="logo_competences" src="images/Logo_Proactif.png" alt="">Proactivité</li>
+
+							<li class="milieu"><img class="logo_competences" src="images/Logo_Adapta.png" alt="">Adaptabilité</li>
+
+							<li class="milieu"><img class="logo_competences" src="images/Logo_Info.png" alt="">Culture informatique</li>
+
+							<li class="milieu"><img class="logo_competences" src="images/Logo_Office.png" alt="">Forte maitrise du Pack Office 365</li>
+
+							<li class="milieu"><img class="logo_competences" src="images/Logo_Canva.png" alt="">Forte maitrise de l'outil Canva</li>
+
+							<li class="milieu"><img class="logo_competences" src="images/Logo_Code.png" alt="">Maitrise basique du language C et SQL</li>
+							
+							<li class="milieu"><img class="logo_competences" src="images/Logo_HTML.png" alt="">Web Design en HTML & CSS</li>
+
 						</ul>
+
 						<br>
 						<br>
+
 					</div>
 
 				</article>
