--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 						<ul id="flex_competence">
 
-							<li class="milieu"><img class="logo_competences" src="images/Logo_DE.png" alt=""><div class="texte_competence">Allemand B1</div></li>
+							<li class="milieu"><img class="logo_competences" src="images/Logo_DE.png" alt="">Allemand B1</li>
 
 							<li class="milieu"><img class="logo_competences" src="images/Logo_UK.png" alt="">Anglais C1</li>
 
